--- a/about.html
+++ b/about.html
@@ -4,17 +4,21 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Sustainable and Fashionable Athleisure Wear">
+        <!--This the title of the webpage-->
         <title>Wholeness Fitness Athleisure | About Us</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="CSS/style.css">
     </head>
-    <body>
+    <body style="background-image: url(images/image2.jpg);"></body>
         <header>
             <div>
                 <a href="#top">
-                    <img src="LOGO.png" align="left" alt="Wholeness Fitness Athleisure Logo">
+                    <img src="images/LOGO.png" width="258" height="258" align="left" alt="Wholeness Fitness Athleisure Logo">
+                    <!--This is the image for the logo-->
                 </a>
+                <!--This is the main heading-->
                 <h1>Wholeness Fitness Athleisure</h1>
             </div>
+            <!--This is the navigation bar that contains the hyperlinks that link the webpages together-->
             <nav>
                         <a href="home.html">Home</a>
                         <a href="about.html">About</a>
@@ -25,17 +29,18 @@
         </header>
         
             <h1>About Us</h1>
-
+    <!--This is a parahraph with the history of the business-->
     <p>
         <h2>History</h2>
         With increase in activity surrounding fitness, comfortable athleisure became a need – a need Wholeness Fitness Athleisure could satisfy by working hard towards fulfilling our vision and achieving our mission. That became a driving force for creating comfortable, fashionable, sustainable, and functional fitness wear.
     </p>
     <p>
-        What started out as a small business in 2014 expanded to owning three stores and being available in seven stores around the country. Showing that the business can cater to diverse people whether they are athletes, fitness enthusiasts, or are simply people with a value for comfortable stylishness in their daily lives. With increase in demand we set out to continue creating a brand that redefines athleisure and continues giving people high-performing and fashionable wear that can be everyday wear. 
+        What started out as nothing more than a vision in 2019 became reality early 2025 due to the high number of people in need of athleisure wear during that time. Showing that the business can cater to diverse people whether they are athletes, fitness enthusiasts, or are simply people with a value for comfortable stylishness in their daily lives. With increase in demand we set out to continue creating a brand that redefines athleisure and continues giving people high-performing and fashionable wear that can be everyday wear. 
     </p>   
 
     <p>
         <h3>Vision</h3>
+        <!--This is an unordered list for the vision-->
        Be a top brand that creates athleisure wear that is:
        <ul>
         <li>Sustainable</li>
@@ -46,8 +51,8 @@
 
     <p>
         <h3>Mission</h3>
+          <!--This is an unordered list for the mission-->
           <ul>
-        
            <li>Encourage people to reach their exercise objectives while feeling secure and at ease in their clothes.</li>
            <li>Make sure the brand stays alive, energised, relevant, and at the forefront of its industry through constant evolution.</li>
            <li>Promote diversity and confidence in individual uniqueness.
@@ -55,6 +60,7 @@
 
           </ul>
     </p>
+        <!--This is the footer section that contains the copyright information-->
         <footer>
             <p>&copy; 2025 Wholeness Fitness Athleisure. All rights reserved.</p>
         </footer>
