--- a/contact.html
+++ b/contact.html
@@ -4,17 +4,21 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Sustainable and Fashionable Athleisure Wear">
+        <!--This the title of the webpage-->
         <title>Wholeness Fitness Athleisure | Contact Us</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="CSS/style.css">
     </head>
-    <body>
+    <body style="background-image: url(images/image2.jpg);"></body>
         <header>
             <div>
                 <a href="#top">
-                    <img src="LOGO.png" align="left" alt="Wholeness Fitness Athleisure Logo">
+                    <img src="images/LOGO.png" width="258" height="258" align="left" alt="Wholeness Fitness Athleisure Logo">
+                    <!--This is the image for the logo-->
                 </a>
+                <!--This is the main heading-->
                 <h1>Wholeness Fitness Athleisure</h1>
             </div>
+            <!--This is the navigation bar that contains the hyperlinks that link the webpages together-->
             <nav>
                         <a href="home.html">Home</a>
                         <a href="about.html">About</a>
@@ -24,6 +28,7 @@
             </nav>
         </header>
         <h2>Contact Us</h2>
+        <!--This is a paragraph containing an unordered list-->
         <p>
             For any queries or feedback, please contact us using the details below.
         <ul>
@@ -32,6 +37,7 @@
             <li>IG: wholenessfitnessathleisure </li>
         </ul>  
         </p>
+        <!--This is the footer section that contains the copyright information-->
         <footer>
             <p>&copy; 2025 Wholeness Fitness Athleisure. All rights reserved.</p>
         </footer>
