--- a/enquiry.html
+++ b/enquiry.html
@@ -4,17 +4,21 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Sustainable and Fashionable Athleisure Wear">
+        <!--This the title of the webpage-->
         <title>Wholeness Fitness Athleisure | Enquiry</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="CSS/style.css">
     </head>
-    <body>
+    <body style="background-image: url(images/image2.jpg);"></body>
         <header>
             <div>
                 <a href="#top">
-                    <img src="LOGO.png" align="left" alt="Wholeness Fitness Athleisure Logo">
+                    <img src="images/LOGO.png" width="258" height="258" align="left" alt="Wholeness Fitness Athleisure Logo">
+                    <!--This is the image for the logo-->
                 </a>
+                <!--This is the main heading-->
                 <h1>Wholeness Fitness Athleisure</h1>
             </div>
+            <!--This is the navigation bar that contains the hyperlinks that link the webpages together-->
             <nav>
                         <a href="home.html">Home</a>
                         <a href="about.html">About</a>
@@ -24,13 +28,15 @@
             </nav>
         </header>
             <h2>Enquiry</h2>
+            <!--This is a form for enquiries-->
             <form action="submit-form.php" method="POST">
                 <input type="text" name="name" placeholder="Your Name" required><br>
                 <input type="email" name="email" placeholder="Your Email" required><br>
                 <input type="contact" name="contact" placeholder="Your Contact Number" required><br>
                 <textareaa name="message" placeholder="Your Message" required></textareaa><br>
-                <button type="submit">Send Message</button>
+                <button type="submit">Send</button>
             </form>
+         <!--This is the footer section that contains the copyright information-->   
         <footer>
             <p>&copy; 2025 Wholeness Fitness Athleisure. All rights reserved.</p>
         </footer>
