--- a/home.html
+++ b/home.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Sustainable and Fashionable Athleisure Wear">
+        <meta name="keywords" content="fashion, sustainable, comfortable, fitness, athleisure">
+        <meta name="google-site-verification" content="qO-YXtXhZqQAmdZmYLweZ8Ph1Xjfp6xYwBjKdmuCgHk" />
         <!--This the title of the webpage-->
         <title>Wholeness Fitness Athleisure | Home</title>
         <link rel="stylesheet" href="CSS/style.css">
@@ -33,6 +35,16 @@
         <!--This is a paragraph that contains a brief welcoming statement-->
         <p class="special-font">
             Welcome to Wholeness Fitness Athleisure, where fitness meeets comfort and fashion. Our mission is to provide our customers with sustainable, fashionable, and functional athleisure wear that improves their fitness journey.
+        </p>
+        <p>
+            <script>
+                var theDate=new Date()
+                document.write("&copy; " + theDate.getFullYear())
+                document.write(" - Mog Hub | Last modified: ")
+                var theModifiedDate=new Date (document.lastModified)
+                document.write(theModifiedDate.toDateString())
+            </script>
+            <br>Powered by "Sharp-Sharp" Web Hosting
         </p>
     </div>
         <form>
