--- a/about.html
+++ b/about.html
@@ -4,9 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Sustainable and Fashionable Athleisure Wear">
+        <meta name="keywords" content="fashion, sustainable, comfortable, fitness, athleisure">
         <!--This the title of the webpage-->
         <title>Wholeness Fitness Athleisure | About Us</title>
         <link rel="stylesheet" href="CSS/style.css">
+        
     </head>
     <body style="background-image: url(images/image2.jpg);"></body>
         <header>
@@ -60,9 +62,20 @@
 
           </ul>
     </p>
+    <p>
+            <script>
+                var theDate=new Date()
+                document.write("&copy; " + theDate.getFullYear())
+                document.write(" - Wholeness Fitness Athleisure | Last modified: ")
+                var theModifiedDate=new Date (document.lastModified)
+                document.write(theModifiedDate.toDateString())
+            </script>
+            <br>Powered by "GitHub" Web Hosting
+        </p>      
         <!--This is the footer section that contains the copyright information-->
         <footer>
             <p>&copy; 2025 Wholeness Fitness Athleisure. All rights reserved.</p>
         </footer>
+    <script src="jscript.js"></script>    
     </body>    
 </html>
