--- a/home.html
+++ b/home.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta name="google-site-verification" content="7GP3uOV8uak-csnF6Amq1Y0YFW6PVMK5dT_1zFQYaek" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Sustainable and Fashionable Athleisure Wear">
@@ -36,24 +35,28 @@
         <p class="special-font">
             Welcome to Wholeness Fitness Athleisure, where fitness meeets comfort and fashion. Our mission is to provide our customers with sustainable, fashionable, and functional athleisure wear that improves their fitness journey.
         </p>
+        
+    </div>
+        <form id="searchForm">
+            <input type="text" id="searchInput" placeholder="Search..." required>
+            <button type="submit">Search</button>
+        </form>
+        <div id="searchResults"></div>
         <p>
+
             <script>
                 var theDate=new Date()
                 document.write("&copy; " + theDate.getFullYear())
-                document.write(" - Mog Hub | Last modified: ")
+                document.write(" - Wholeness Fitness Athleisure | Last modified: ")
                 var theModifiedDate=new Date (document.lastModified)
                 document.write(theModifiedDate.toDateString())
             </script>
-            <br>Powered by "Sharp-Sharp" Web Hosting
-        </p>
-    </div>
-        <form>
-            <input type="text" method="GET">
-            <button type="submit">Search</button>
-        </form>
+            <br>Powered by "GitHub" Web Hosting
+        </p>      
         <!--This is the footer section that contains the copyright information-->
         <footer>
             <p>&copy; 2025 Wholeness Fitness Athleisure. All rights reserved.</p>
         </footer>
+    <script src="jscript.js"></script>  
     </body>    
 </html>
