--- a/products.html
+++ b/products.html
@@ -4,9 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Sustainable and Fashionable Athleisure Wear">
+        <meta name="keywords" content="fashion, sustainable, comfortable, fitness, athleisure">
         <!--This the title of the webpage-->
         <title>Wholeness Fitness Athleisure | Products</title>
         <link rel="stylesheet" href="CSS/style.css">
+        
     </head>
     <body style="background-image: url(images/image2.jpg);"></body>
         <header>
@@ -31,20 +33,32 @@
             <h2>Products</h2>
             <!--This is a ordered list containing the images for the products with sets showing how they will fit in different screens and what sizes they will be shown in-->
             <div class="products">
-                <img src="images/image1.jpg" srcset="images/image1.jpg 400w, images/image1.jpg 800w,images/image1.jpg 1200" sizes="(max-width: 600px) 100vw, (max-width:1024) 80vw, 50vw" alt="Image 1">
-                <img src="images/image2.jpg" srcset="images/image2.jpg 400w, images/image2.jpg 800w,images/image2.jpg 1200" sizes="(max-width: 600px) 100vw, (max-width:1024) 80vw, 50vw" alt="Image 2">
-                <img src="images/image3.jpg" srcset="images/image3.jpg 400w, images/image3.jpg 800w,images/image3.jpg 1200" sizes="(max-width: 600px) 100vw, (max-width:1024) 80vw, 50vw" alt="Image 3">
-                <img src="images/image4.jpg" srcset="images/image4.jpg 400w, images/image4.jpg 800w,images/image4.jpg 1200" sizes="(max-width: 600px) 100vw, (max-width:1024) 80vw, 50vw" alt="Image 4">
-                <img src="images/image5.jpg" srcset="images/image5.jpg 400w, images/image5.jpg 800w,images/image5.jpg 1200" sizes="(max-width: 600px) 100vw, (max-width:1024) 80vw, 50vw" alt="Image 5">
-                <img src="images/image6.jpg" srcset="images/image6.jpg 400w, images/image6.jpg 800w,images/image6.jpg 1200" sizes="(max-width: 600px) 100vw, (max-width:1024) 80vw, 50vw" alt="Image 6">
-                <img src="images/image7.jpg" srcset="images/image7.jpg 400w, images/image7.jpg 800w,images/image7.jpg 1200" sizes="(max-width: 600px) 100vw, (max-width:1024) 80vw, 50vw" alt="Image 7">
-                <img src="images/image8.jpg" srcset="images/image8.jpg 400w, images/image8.jpg 800w,images/image8.jpg 1200" sizes="(max-width: 600px) 100vw, (max-width:1024) 80vw, 50vw" alt="Image 8">
-                <img src="images/image9.jpg" srcset="images/image9.jpg 400w, images/image9.jpg 800w,images/image9.jpg 1200" sizes="(max-width: 600px) 100vw, (max-width:1024) 80vw, 50vw" alt="Image 9">
-                <img src="images/image10.jpg" srcset="images/image10.jpg 400w, images/image10.jpg 800w,images/image10.jpg 1200" sizes="(max-width: 600px) 100vw, (max-width:1024) 80vw, 50vw" alt="Image 10">
+                <img src="images/image1.jpg" data-lightbox="pruducts" data-title="two piece fitness wear" srcset=images/image1.jpg 400w, images/image1.jpg 800w,images/image1.jpg 1200" sizes="(max-width: 600px) 100vw, (max-width:1024) 80vw, 50vw" alt="athleisure wear">
+                <img src="images/image2.jpg" srcset="images/image2.jpg 400w, images/image2.jpg 800w,images/image2.jpg 1200" sizes="(max-width: 600px) 100vw, (max-width:1024) 80vw, 50vw" alt="athleisure wear">
+                <img src="images/image3.jpg" srcset="images/image3.jpg 400w, images/image3.jpg 800w,images/image3.jpg 1200" sizes="(max-width: 600px) 100vw, (max-width:1024) 80vw, 50vw" alt="athleisure wear">
+                <img src="images/image4.jpg" srcset="images/image4.jpg 400w, images/image4.jpg 800w,images/image4.jpg 1200" sizes="(max-width: 600px) 100vw, (max-width:1024) 80vw, 50vw" alt="fitness wear">
+                <img src="images/image5.jpg" srcset="images/image5.jpg 400w, images/image5.jpg 800w,images/image5.jpg 1200" sizes="(max-width: 600px) 100vw, (max-width:1024) 80vw, 50vw" alt="athleisure wear">
+                <img src="images/image6.jpg" srcset="images/image6.jpg 400w, images/image6.jpg 800w,images/image6.jpg 1200" sizes="(max-width: 600px) 100vw, (max-width:1024) 80vw, 50vw" alt="fitness wear">
+                <img src="images/image7.jpg" srcset="images/image7.jpg 400w, images/image7.jpg 800w,images/image7.jpg 1200" sizes="(max-width: 600px) 100vw, (max-width:1024) 80vw, 50vw" alt="athleisure wear">
+                <img src="images/image8.jpg" srcset="images/image8.jpg 400w, images/image8.jpg 800w,images/image8.jpg 1200" sizes="(max-width: 600px) 100vw, (max-width:1024) 80vw, 50vw" alt="fitness wear">
+                <img src="images/image9.jpg" srcset="images/image9.jpg 400w, images/image9.jpg 800w,images/image9.jpg 1200" sizes="(max-width: 600px) 100vw, (max-width:1024) 80vw, 50vw" alt="athleisure wear">
+                <img src="images/image10.jpg" srcset="images/image10.jpg 400w, images/image10.jpg 800w,images/image10.jpg 1200" sizes="(max-width: 600px) 100vw, (max-width:1024) 80vw, 50vw" alt="athleisure wear">
                 </div>
+
+        <p>
+            <script>
+                var theDate=new Date()
+                document.write("&copy; " + theDate.getFullYear())
+                document.write(" - Wholeness Fitness Athleisure | Last modified: ")
+                var theModifiedDate=new Date (document.lastModified)
+                document.write(theModifiedDate.toDateString())
+            </script>
+            <br>Powered by "GitHub" Web Hosting
+        </p>      
         <!--This is the footer section that contains the copyright information-->    
         <footer>
             <p>&copy; 2025 Wholeness Fitness Athleisure. All rights reserved.</p>
         </footer>
+    
     </body>    
 </html>
